# parchment

./: .gitignore  Cargo.toml  README.md  runwasm.js
code_gen/: Cargo.toml
code_gen/src/: code_gen.rs  convert.rs  desugar.rs  desugar_new.rs  high_ir.rs  lib.rs  lift.rs  rc.rs  variable.rs  variable_new.rs  wasm.rs
core/: main.rs
expr/: Cargo.toml
expr/src/: expr.rs  fmt.rs  kind.rs  lexer.rs  lib.rs  parser.rs  token.rs  types.rs
src/: codegen.rs  expr.rs  gen.rs  infer.rs  lexer.rs  lift.rs  main.rs  parser.rs  solve.rs  token.rs  types.rs  wasm.rs
type_checker/: Cargo.toml
type_checker/src/: generate.rs  lib.rs  solve.rs
