[package]
name = "parchment"
version = "0.1.0"
edition = "2018"


[[bin]]
bench = false
path = "core/main.rs"
name = "parchment"


[dependencies]
code_gen = { path = "./code_gen" }
expr = { path = "./expr" }
type_checker = { path = "./type_checker" }

[workspace]
members = [
    "expr",
    "type_checker",
    "code_gen"
]
